--- a/style.css
+++ b/style.css
@@ -1897,6 +1897,7 @@ canvas {
     }
 
     .parallax__title_about h2 {
+        text-align: center;
         margin-left: 33px;
         margin-top: -70px;
         transform: rotate(90deg);
@@ -1921,11 +1922,13 @@ canvas {
     }
 
     .column-visimisi h2 {
+        text-align: center;
         font-size: 25px;
         margin: 30px 0 0 0;
     }
 
     .column-visimisi h6 {
+        text-align: center;
         font-size: 80px;
         margin: -30px 0 0 10px;
         transform: rotate(90deg);
@@ -1948,6 +1951,7 @@ canvas {
     }
 
     .column h6 {
+        text-align: center;
         font-size: 80px;
         margin: -60px 0 0 10px;
         transform: rotate(90deg);
