--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ html, body {
     padding: 0;
 }
 
+* {
+    outline: 1px solid red;
+}
 
 
 body {
@@ -22,6 +25,17 @@ body {
     background-attachment: fixed;
     /* Biarkan gambar tetap saat di-scroll */
 
+}
+
+body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('img/bgdr.png') no-repeat center center / cover;
+    z-index: -1;
 }
 
 
