--- a/style.css
+++ b/style.css
@@ -6,10 +6,20 @@ html, body {
 
 body {
     font-family: 'Poppins', sans-serif;
-    background: url('img/bgdr.png') no-repeat center center / cover;
-    background-attachment: fixed;
+    position: relative;
+    z-index: 1;
 }
 
+body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('img/bgdr.png') no-repeat center center / cover;
+    z-index: -1;
+}
 
 .osmo-icon-svg {
     width: 8em;
