--- a/style.css
+++ b/style.css
@@ -1,25 +1,21 @@
-html, body {
-    height: 100%;
-    min-height: 100vh;
-    width: 100%;
-}
-
 body {
     font-family: 'Poppins', sans-serif;
-    position: relative;
-    z-index: 1;
+    margin: 0;
+    padding: 0;
+    background-image: url('img/bgdr.png');
+    /* Ganti dengan path gambar */
+    background-size: cover;
+    /* Agar gambar menutupi seluruh layar */
+    background-position: center;
+    /* Pusatkan gambar */
+    background-repeat: no-repeat;
+    /* Hindari pengulangan gambar */
+    background-attachment: fixed;
+    /* Biarkan gambar tetap saat di-scroll */
+
 }
 
-body::before {
-    content: "";
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url('img/bgdr.png') no-repeat center center / cover;
-    z-index: -1;
-}
+
 
 .osmo-icon-svg {
     width: 8em;
