--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
-html, body {
+body {
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
-    background: url('img/bgdr.png') no-repeat center center fixed;
+    background-image: url('img/bgdr.png');
+    /* Ganti dengan path gambar */
     background-size: cover;
-    width: 100%;
-    min-height: 100vh;
-    overflow-x: hidden;
-}
+    /* Agar gambar menutupi seluruh layar */
+    background-position: center;
+    /* Pusatkan gambar */
+    background-repeat: no-repeat;
+    /* Hindari pengulangan gambar */
+    background-attachment: fixed;
+    /* Biarkan gambar tetap saat di-scroll */
 
-/* Biarkan body membentang sepanjang semua kontennya */
-body {
-    display: flex;
-    flex-direction: column;
 }
 
 
