--- a/style.css
+++ b/style.css
@@ -2,12 +2,6 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
-   
-
-}
-
-
-.wrapper_body{
     background-image: url('img/bgdr.png');
     /* Ganti dengan path gambar */
     background-size: cover;
@@ -18,7 +12,12 @@ body {
     /* Hindari pengulangan gambar */
     background-attachment: fixed;
     /* Biarkan gambar tetap saat di-scroll */
+    image-rendering: optimizeSpeed;
+
 }
+
+
+
 
 
 .osmo-icon-svg {
