--- a/style.css
+++ b/style.css
@@ -416,7 +416,27 @@ body {
     transform: translateX(0);
 }
 
+.column-visimisi  {
+    opacity: 0;
+    transform: translateX(-100px);
+    transition: opacity 0.3s ease-out, transform 3s ease-out;
+}
 
+.column-visimisi .visible{
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.column {
+    opacity: 0;
+    transform: translateX(100px);
+    transition: opacity 0.3s ease-out, transform 3s ease-out;
+}
+
+.column.visible{
+    opacity: 1;
+    transform: translateX(0);
+}
 
 
 .visible {
@@ -724,9 +744,6 @@ body {
     margin: 0 auto;
     margin-top: -15px;
 
-    /* background: linear-gradient(to top, #333 5%, rgb(255, 255, 255) 20%); */
-    /* background: linear-gradient(90deg, rgba(255,255,255,1) 32%, rgba(0,236,255,1) 100%); */
-
 }
 
 
@@ -752,6 +769,48 @@ body {
 }
 
 .card-promo:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+    background: linear-gradient(0deg, rgba(255, 246, 246, 0) 0%, rgba(34, 193, 195, 1) 88%);
+
+}
+.card-promo2 {
+    width: 300px;
+    height: 430px;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 164, 204);
+    overflow: hidden;
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    margin: 0 30px;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(20px);
+    transition: background 0.10s ease-in-out, transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    color: #eaeaea;
+
+}
+
+.card-promo2:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+    background: linear-gradient(0deg, rgba(255, 246, 246, 0) 0%, rgba(34, 193, 195, 1) 88%);
+
+}
+.card-promo3 {
+    width: 300px;
+    height: 430px;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 164, 204);
+    overflow: hidden;
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    margin: 0 30px;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(20px);
+    transition: background 0.10s ease-in-out, transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    color: #eaeaea;
+
+}
+
+.card-promo3:hover {
     transform: scale(1.05);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
     background: linear-gradient(0deg, rgba(255, 246, 246, 0) 0%, rgba(34, 193, 195, 1) 88%);
@@ -813,6 +872,12 @@ body {
 
 
 .card-promo:hover .stats {
+    background: #0056b3;
+}
+.card-promo2:hover .stats {
+    background: #0056b3;
+}
+.card-promo3:hover .stats {
     background: #0056b3;
 }
 
@@ -881,6 +946,36 @@ body {
 }
 
 
+.card-promo {
+    opacity: 0;
+    transform: translateY(100px);
+    transition: opacity 0.3s ease-out, transform 1s ease-out;
+}
+
+.card-promo.visible{
+    opacity: 1;
+    transform: translateY(0);
+}
+.card-promo2 {
+    opacity: 0;
+    transform: translateY(100px);
+    transition: opacity 0.3s ease-out, transform 2s ease-out;
+}
+
+.card-promo2.visible{
+    opacity: 1;
+    transform: translateY(0);
+}
+.card-promo3 {
+    opacity: 0;
+    transform: translateY(100px);
+    transition: opacity 0.3s ease-out, transform 3s ease-out;
+}
+
+.card-promo3.visible{
+    opacity: 1;
+    transform: translateY(0);
+}
 
 
 
@@ -950,6 +1045,16 @@ body {
     color: rgb(255, 255, 255);
 }
 
+.container-unggulan {
+    opacity: 0;
+    transform: translateY(100px);
+    transition: opacity 0.3s ease-out, transform 3s ease-out;
+}
+
+.container-unggulan.visible{
+    opacity: 1;
+    transform: translateY(0);
+}
 
 
 
@@ -1960,6 +2065,14 @@ canvas {
     }
 
     .card-promo {
+        width: 300px;
+        margin-bottom: 30px;
+    }
+    .card-promo2 {
+        width: 300px;
+        margin-bottom: 30px;
+    }
+    .card-promo3 {
         width: 300px;
         margin-bottom: 30px;
     }
