--- a/style.css
+++ b/style.css
@@ -227,8 +227,6 @@ body {
     top: -20%;
 }
 
-
-
 @font-face {
     font-family: 'PP Neue Corp Wide';
     src: url('https://cdn.prod.website-files.com/671752cd4027f01b1b8f1c7f/6717e399d30a606fed425914_PPNeueCorp-WideUltrabold.woff2') format('woff2');
@@ -1161,7 +1159,7 @@ p+p {
     box-shadow: none;
     background: transparent;
     transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-    margin: 0 30px;
+    margin: 0 70px;
 }
 
 .card-bg {
@@ -1726,6 +1724,10 @@ canvas {
         width: 300px;
         padding-top: 30px;
         margin-top: 30px;
+    }
+
+    .card{
+        margin:0 -5px;
     }
 
 }
