--- a/style.css
+++ b/style.css
@@ -281,7 +281,7 @@ body {
 
 
 
-.parallax__title_about h1 {
+._about h1 {
     font-size: 5vh;
     margin: 25px 0 0 65px;
 }
@@ -1627,73 +1627,77 @@ canvas {
 @media (max-width: 1300px) {
 
     .parallax__content {
-        padding: 200px 20px;
+        padding: 200px 150px;
         text-align: center;
     }
 
     .parallax__title_about {
-        padding: 0 130px ;
+        padding: 20px 0 ;
         flex-direction: column;
     }
 
     .parallax__title_about h1 {
-        font-size: 5vh;
+        font-size: 10vh;
         text-decoration: none;
+        margin: 0 0 0 0;
         
 
     }
 
-
-
     .parallax__title_about p {
         text-align: center;
-        font-size: 22px;
-        padding: 0 0;
-        margin: 10px 0 0 0;
+        font-size: 19px;
+        padding: 0 90px;
+        margin: 0 0 0 0;
     }
 
     .visimisi {
-        padding: 0 0 0 0;
+        padding: 20px 0;
     }
 
     .column-visimisi {
-        padding:0 150px;
-        margin: 60px 0 50px 0;
+        padding:50px 100px;
+        margin: 0 0 0 0;
         flex-direction: column;
     }
 
     .column-visimisi h2 {
-        font-size: 40px;
+        font-size: 50px;
         margin: 0 0 0 0;
     }
 
     .column-visimisi p {
-        font-size: 22px;
+        font-size: 19px;
         margin: 10px 0 0 0;
+        
     }
 
 
     .column {
         flex-direction: column;
-        margin:  -10px 0 0 0;
+        margin:0 0 0 0;
+        padding: 50px 0 0 0;
     }
 
     .column h2 {
-        font-size: 40px;
-        margin: 50px 0 0 30px;
+        font-size: 50px;
+        margin: 0 0 0 0;
     }
 
 
 
     .column span {
-        margin: 20px 0 0 0;
-        padding: 0 50px;
+        flex-direction: column;
+        margin:0 0 0 0;
+        padding: 10px 100px;
         
     }
 
     .column li {
         font-size: 20px;
         text-align: start;
+        line-height: 22px;
+        margin: 10px 0;
     }
 
 
@@ -1739,29 +1743,29 @@ canvas {
     .parallax__title_2 {
         font-size: 35px;
     }
+    .parallax__content {
+        padding: 30px 20px;
+    }
+
 
     .parallax__title_about {
-        display: flex;
-        padding: 50px 70px;
-        margin-bottom: .1em;
-        margin: 0;
-        font-size: 60px;
-        position: relative;
-        color: rgb(255, 255, 255);
+        padding: 20px 20px;
+        margin: 0 0 0 0;
     }
 
 
 
     .parallax__title_about h1 {
-        font-size: 3vh;
-        margin: 0 0 0 20px;
+        font-size: 8vh;
+        margin: 0 0 0 0;
     }
 
 
 
     .parallax__title_about p {
-        margin: 0 0 0 60px;
-        font-size: 15px;
+        margin: 0 0 0 0;
+        font-size: 14px;
+        padding: 0 10px;
     }
 
 
@@ -1773,12 +1777,14 @@ canvas {
 
     .column-visimisi {
         flex-direction: column;
+        padding: 0 70px;
+        margin: 0 0 0 0;
     }
 
     .column-visimisi h2 {
-        font-size: 25px;
-        margin: -70px 0 0 0;
-
+        font-size: 50px;
+        margin: 0 0 0 0;
+        padding: 20px 0 0 0;
     }
 
     .column-visimisi p {
@@ -1796,19 +1802,23 @@ canvas {
 
 
     .column h2 {
-        font-size: 25px;
+        font-size: 50px;
         margin: 0 0 0 0;
+        padding: 0 0 10px 0;
     }
 
 
     .column span {
-        margin: 10px 0 0 30px;
+        margin: 0 0;
+        padding: 0 20px 0 50px;
+        flex-direction: column;
     }
 
     .column li {
         text-align: start;
         font-size: 14px;
-        margin: 0 5px 0 5px;
+        margin: 10px 0 10px 0;
+        
     }
 
 
@@ -1907,7 +1917,7 @@ canvas {
     .parallax__title_about {
         display: flex;
         flex-direction: column;
-        padding: 0 20px 0 20px;
+        padding: 0 20px 40px 20px;
     }
 
     .parallax__title_about h1 {
